[UPDATE]: Fixing Content updates

--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <!-- Google tag (gtag.js) -->
@@ -29,7 +29,10 @@
             content="Get ready as the 84th edition of REBECA is right around the corner. BEings, Pujo asche!"
         />
 
-        <meta name="theme-color" content="#5075f6" />
+        <meta name="theme-color" content="#7e34ff" />
+        <meta property="og:title" content="Rebeca 84" />
+        <meta property="og:description" content="BEings, Pujo asche!" />
+        <meta property="og:image" content="/assets/imgs/home/cover-image-rebeca.webp" />
 
         <link rel="manifest" href="/manifest.json" />
         <script src="https://kit.fontawesome.com/a5809f8554.js" crossorigin="anonymous"></script>
