--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NM0WKT3LC"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-T0SB4C4MSH"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() {
@@ -10,7 +10,7 @@
             }
             gtag("js", new Date());
 
-            gtag("config", "G-4NM0WKT3LC");
+            gtag("config", "G-T0SB4C4MSH");
         </script>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/x-icon" href="/favicon.ico" />
